--- a/index.html
+++ b/index.html
@@ -7,6 +7,209 @@
     <title>Document</title>
 </head>
 <body>
-    
+<heder>
+    <a href="">
+        <img src="./images/Logo.svg" alt="логотип">
+    </a>
+    <nav>
+        <ul>
+            <li>
+                <a href="">О нас</a>
+            </li>
+            <li>
+                <a href="">Услуги и цены</a>
+            </li>
+            <li>
+                <a href="">Мастера</a>
+            </li>
+            <li>
+                <a href="">Контакты</a>
+            </li>
+        </ul>
+    </nav>
+    <a href="tel:+380441111111" target="_blank" rel="noopener noreferrer">+38 044 111 11 11</a>
+    <button type="button">онлайн-запись</button>
+</heder>    
+<main>
+<section>
+    <ul>
+        <li><a href="" target="_blank">Instagram</a>
+        </li>
+        <li><a href="" target="_blank">Youtube</a>
+        </li>
+    </ul>
+    <p lang="en">A hair salon for men in Kyiv</p>
+    <h1 lang="en">BarberShop</h1>
+    <p>Мы эксперты в модных мужских стрижках.<br>Работаем быстро, осторожно и со вкусом.</p>
+</section>
+<section>
+    <ul>
+        <li>
+            <img 
+            src="./images/img 1.jpg"
+            alt="Барбер бреет шею"
+            width="270"
+            height="445"
+            >
+        </li>
+        <li>
+            <img
+            src="./images/img 2.jpg"
+            alt="Барбер бреет затилок"
+            width="270"
+            height="445"
+            >
+        </li>
+    </ul>
+    <p>О нас</p>
+    <h2>Лучший Барбершоп твоего города</h2>
+    <p>
+        Если ты хочешь добавить в свой образ больше уверенности – тебе точно к нам.
+    </p>
+    <p>
+        Мы команда, которая никогда не останавливается на достигнутом 
+        и жаждет перемен. И когда ты попадешь в руки нашего мастера, 
+        то уже никогда не сможешь быть прежним. Мы команда, которая всегда с клиентами "на одной волне". Поэтому, мы всегда готовы усовершенствовать каждого, кто к нам приходит!
+    </p>
+    <button type="button">онлайн-запись</button>
+</section>
+<section>
+    <p>
+        Проведи время в компании лучших мастеров
+    </p>
+    <h2>Услуги и цены</h2>
+    <ul>
+        <li>
+            <p>Мужская стрижка</p>
+            <p>от 300 грн.</p>
+        </li>
+        <li>
+            <p>Стрижка бороды</p>
+            <p>от 200 грн.</p>
+        </li>
+        <li>
+            <p>Стрижка усов</p>
+            <p>от 200 грн.</p>
+        </li>
+        <li>
+            <p>Бритье опасной бритвой</p>
+            <p>от 200 грн.</p>
+        </li>
+    </ul>
+    <ul>
+        <li>
+            <p>Cтрижка у стажера</p>
+            <p>от 50 грн.</p>
+        </li>
+        <li>
+            <p>Стрижка под насадку</p>
+            <p>от 200 грн.</p>
+        </li>
+        <li>
+            <p>Детская стрижка (до 12 лет)</p>
+            <p>от 300 грн.</p>
+        </li>
+        <li>
+            <p>Камуфлирование седины</p>
+            <p>от 200 грн.</p>
+        </li>
+    </ul>
+    <button type="button">онлайн-запись</button>
+</section>
+<section>
+    <ul>
+        <li>
+            <p>600</p>
+            <p>Довольных клиентов в день</p>
+        </li>
+        <li>
+            <p>50</p>
+            <p>Наград за отличный сервис </p>
+        </li>
+        <li>
+            <p>20</p>
+            <p>Лучших мастеров Киева </p>
+        </li>
+        <li>
+            <p>100</p>
+            <p>Подарков постоянным клиентам</p>
+        </li>
+    </ul>
+    <p>Cтарая традиционная школа</p>
+    <h2>Почему приходят именно к нам?</h2>
+    <p>
+        О нас говорят только хорошее. Но лучше 1 раз увидеть и прочувствовать, чем 10 раз прочитать. 
+    </p>
+</section>
+<section>
+    <p>Для настоящих ценителей атмосферы</p>
+    <h2>Наши мастера</h2>
+    <ul>
+        <li>
+            <img src="./images/img_master1.jpg" alt="Джон Смит"
+            width="370"
+            height="346">
+                <p lang="en">John Smith</p>
+                <p lang="en">Extreme Barber</p>
+        </li>
+        <li>
+            <img src="./images/img_master2.jpg" alt="Мишель Дое">
+                <p lang="en">Michele Doe</p>
+                <p lang="en">Extreme Barber</p>
+            </img>
+        </li>
+        <li>
+            <img src="./images/img_master3.jpg" alt="Ален Блек">
+                <p lang="en">Alan Black</p>
+                <p lang="en">Extreme Barber</p>
+
+            </img>
+        </li>
+    </ul>
+</section>
+<section>
+    <!-- <h2>Работы мастеров</h2> -->
+    <p>На латинском языке “барба” означает “борода”</p>
+    <ul>
+        <li><img src="./images/photo1.jpg" alt="Стрижка машинкой"
+            width="270"
+            height="360">
+        </li>
+        <li><img src="./images/photo2.jpg" alt="Бреет бороду"
+            width="270"
+            height="360">
+        </li>
+        <li><img src="./images/photo3.jpg" alt="Увлажняет лицо"
+            width="270"
+            height="360">
+        </li>
+        <li><img src="./images/photo4.jpg" alt="Бреет затилок"
+            width="270"
+            height="360">
+        </li>
+    </ul>
+</section>
+<section>
+    <h2>Онлайн-запись</h2>
+    <h2>Контакты</h2>
+    <address>
+        <ul>
+            <li><a href="https://goo.gl/maps/LbS5ckXCGobnBB1T9" target="_blank" rel="noopener noreferrer">ул. Васильковская, 7А 
+                Киев, 08132</a></li>
+            <li><a href="tel:+380441111111" target="_blank" rel="noopener noreferrer">+38 044 111 11 11</a></li>
+            <li><a href="mailto:barbershop@email.com" target="_blank" rel="noopener noreferrer">barbershop@email.com</a></li>
+        </ul>
+    </address>
+    <b>время работы</b>
+    <p>Ежедневно с 9:00 до 22:00</p>
+</section>
+</main>
+<footer>
+    <p>&copy; Copyright 2020</p>
+    <ul>
+        <li><a href="http://" target="_blank" rel="noopener noreferrer">Instagram</a></li>
+        <li><a href="http://" target="_blank" rel="noopener noreferrer">Youtube</a></li>
+    </ul>
+</footer>
 </body>
 </html>
