--- a/index.html
+++ b/index.html
@@ -1,215 +1,267 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="uk">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&family=Raleway:wght@700&display=swap" rel="stylesheet">
+    <link href="./css/main.min.css" rel="stylesheet"/>
 </head>
 <body>
-<heder>
-    <a href="">
-        <img src="./images/Logo.svg" alt="логотип">
-    </a>
-    <nav>
+    <header class="header">
+        <div class="container header_container">
+            <nav class="navigation">
+                <a class="logo header_logo" href="/" aria-label="логотип сайту">
+                    <svg class="logo_img" width="68" height="54">
+                        <use href="./images/sprite.svg#icon-Logo"></use>
+                    </svg>
+                </a>
+                <ul class="nav-list list">
+                    <li class="nav-list_item">
+                        <a class="nav-list_Link" href="#">Про нас</a>
+                    </li>
+                    <li class="nav-list_item">
+                        <a class="nav-list_Link" href="#">Послуги та ціни</a>
+                    </li>
+                    <li class="nav-list_item">
+                        <a class="nav-list_Link" href="#">Майстри</a>
+                    </li>
+                    <li class="nav-list_item">
+                        <a class="nav-list_Link" href="#">Контакти</a>
+                    </li>
+                </ul>
+            </nav>
+            <button type="button" class="mobile-menu-btn" data-menu-open>
+                <svg class="mobile-menu-btn_icon" width="40" height="40">
+                    <use href="./images/sprite.svg#burger-menu"></use>
+                </svg>
+            </button>
+            <!-- <a class="contact-number linr" href="tel:+380441111111" target="_blank" rel="noopener noreferrer">+38 044 111 11 11</a>
+            <button class="modal-btn madal-btn_theme_dark header_modal-btn" type="button" data-modal-open>онлайн-запис</button> -->
+                    <!-- <ul class="social-networks">
+                        <li class="social-networks_item"><a href="" target="_blank">Instagram</a>
+                        </li>
+                        <li class="social-networks_item"><a href="" target="_blank">Youtube</a>
+                        </li>
+                    </ul>
+                <nav>
+                </nav> -->
+        </div>
+        <div class="mobile-menu" data-menu>
+            <div class="container mobile-menu_container">
+                <button type="button" class="mobile-menu_close-btn" data-menu-close>
+                    <svg class="mobile-menu_close-icon" width="40" height="40">
+                        <use href="./images/sprite.svg#icon-close_40px"></use>
+                    </svg>
+                </button>
+                <ul class="main-menu">
+                    <li class="main-menu_item">
+                        <a href="">Про нас</a>
+                    </li>
+                    <li class="main-menu_item">
+                        <a href="">Послуги та ціни</a>
+                    </li>
+                    <li class="main-menu_item">
+                        <a href="">Майстри</a>
+                    </li>
+                    <li class="main-menu_item">
+                        <a href="">Контакти</a>
+                    </li>
+                </ul>
+                <a href="tel:+380441111111" target="_blank" rel="noopener noreferrer">+38 044 111 1 1 11</a>
+                <button type="button">онлайн-запис</button>
+                <ul>
+                    <li>
+                        <a href="">Instagram</a>
+                    </li>
+                    <li>
+                        <a href="">Youtube</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </header>    
+    <main>
+        <p lang="en">A hair salon for men in Kyiv</p>
+        <h1 lang="en">BarberShop</h1>
+        <p>Ми експерти у модних чоловічих стрижках.<br>Працюємо швидко, обережно та зі смаком.</p>
+        <section class="about-me">
+            <ul>
+                <li>
+                    <img 
+                    src="./images/img 1.jpg"
+                    alt="Барбер голить шию"
+                    width="270"
+                    height="445"
+                    >
+                </li>
+                <li>
+                    <img
+                    src="./images/img 2.jpg"
+                    alt="Барбер голить потилицю"
+                    width="270"
+                    height="445"
+                    >
+                </li>
+            </ul>
+            <p>про нас</p>
+            <h2>Найкращий Барбершоп твого міста</h2>
+            <p>
+                Якщо ти хочеш додати у свій образ більше впевненості - тобі точно до нас.
+            </p>
+            <p>
+                Ми команда, яка ніколи не зупиняється на досягнутому 
+                і прагне змін. І коли ти потрапиш до рук нашого майстра, 
+                то вже ніколи не зможеш бути тим самим. Ми команда, яка 
+                завжди з клієнтами "на одній хвилі". Тому ми завжди готові 
+                вдосконалити кожного, хто до нас приходить!
+            </p>
+            <button type="button">онлайн-запис</button>
+        </section>
+        <section>
+            <p>
+                Проведи час у компанії кращих майстрів
+            </p>
+            <h2>Послуги та ціни</h2>
+            <ul>
+                <li>
+                    <p>Чоловіча стрижка</p>
+                    <p>від 300 грн.</p>
+                </li>
+                <li>
+                    <p>Стрижка бороди</p>
+                    <p>від 200 грн.</p>
+                </li>
+                <li>
+                    <p>Стрижка вусів</p>
+                    <p>від 200 грн.</p>
+                </li>
+                <li>
+                    <p>Гоління небезпечною бритвою</p>
+                    <p>від 200 грн.</p>
+                </li>
+            </ul>
+            <ul>
+                <li>
+                    <p>Cтрижка у стажера</p>
+                    <p>від 50 грн.</p>
+                </li>
+                <li>
+                    <p>Стрижка під насадку</p>
+                    <p>від 200 грн.</p>
+                </li>
+                <li>
+                    <p>Дитяча стрижка (до 12 років)</p>
+                    <p>від 300 грн.</p>
+                </li>
+                <li>
+                    <p>Камуфлювання сивини</p>
+                    <p>від 200 грн.</p>
+                </li>
+            </ul>
+            <button type="button">онлайн-запис</button>
+        </section>
+        <section>
+            <ul>
+                <li>
+                    <p>600</p>
+                    <p>Задоволених клієнтів на день</p>
+                </li>
+                <li>
+                    <p>50</p>
+                    <p>Нагород за відмінний сервіс</p>
+                </li>
+                <li>
+                    <p>20</p>
+                    <p>Найкращих майстрів Києва</p>
+                </li>
+                <li>
+                    <p>100</p>
+                    <p>Подарунків постійним клієнтам</p>
+                </li>
+            </ul>
+            <p>Стара традиційна школа</p>
+            <h2>Чому приходять саме до нас?</h2>
+            <p>
+                Про нас говорять лише добре. Але краще 1 раз побачити та відчути, ніж 10 разів прочитати. 
+            </p>
+        </section>
+        <section>
+            <p>Для справжніх поціновувачів атмосфери</p>
+            <h2>Наші майстри</h2>
+            <ul>
+                <li>
+                    <img src="./images/img_master1.jpg" alt="Джон Сміт"
+                    width="370"
+                    height="346">
+                        <p lang="en">John Smith</p>
+                        <p lang="en">Extreme Barber</p>
+                </li>
+                <li>
+                    <img src="./images/img_master2.jpg" alt="Мішель Дое">
+                        <p lang="en">Michele Doe</p>
+                        <p lang="en">Extreme Barber</p>
+                    </img>
+                </li>
+                <li>
+                    <img src="./images/img_master3.jpg" alt="Ален Блек">
+                        <p lang="en">Alan Black</p>
+                        <p lang="en">Extreme Barber</p>
+                    </img>
+                </li>
+            </ul>
+        </section>
+        <section>
+            <!-- <h2>Работы мастеров</h2> -->
+            <p>Латинською мовою "барба" означає "борода"</p>
+            <ul>
+                <li><img src="./images/photo1.jpg" alt="Стрижка машинкою"
+                    width="270"
+                    height="360">
+                </li>
+                <li><img src="./images/photo2.jpg" alt="Голить бороду"
+                    width="270"
+                    height="360">
+                </li>
+                <li><img src="./images/photo3.jpg" alt="Зволожує обличчя"
+                    width="270"
+                    height="360">
+                </li>
+                <li><img src="./images/photo4.jpg" alt="Голить потилицю"
+                    width="270"
+                    height="360">
+                </li>
+            </ul>
+        </section>
+        <section>
+            <h2>Онлайн-запис</h2>
+        </section>
+        <section>
+            <h2>Контакти</h2>
+            <address>
+                <ul>
+                    <li><a href="https://goo.gl/maps/LbS5ckXCGobnBB1T9" target="_blank" rel="noopener noreferrer">вул. Васильківська, 7А 
+                        Київ, 08132</a></li>
+                    <li><a href="tel:+380441111111" target="_blank" rel="noopener noreferrer">+38 044 111 11 11</a></li>
+                    <li><a href="mailto:barbershop@email.com" target="_blank" rel="noopener noreferrer">barbershop@email.com</a></li>
+                </ul>
+            </address>
+            <b>години роботи</b>
+            <p>Щоденно з 9:00 до 22:00</p>
+        </section>
+    </main>
+    <footer>
+        <p>&copy; Copyright 2020</p>
         <ul>
-            <li>
-                <a href="">О нас</a>
-            </li>
-            <li>
-                <a href="">Услуги и цены</a>
-            </li>
-            <li>
-                <a href="">Мастера</a>
-            </li>
-            <li>
-                <a href="">Контакты</a>
-            </li>
+            <li><a href="http://" target="_blank" rel="noopener noreferrer">Instagram</a></li>
+            <li><a href="http://" target="_blank" rel="noopener noreferrer">Youtube</a></li>
         </ul>
-    </nav>
-    <a href="tel:+380441111111" target="_blank" rel="noopener noreferrer">+38 044 111 11 11</a>
-    <button type="button">онлайн-запись</button>
-</heder>    
-<main>
-<section>
-    <ul>
-        <li><a href="" target="_blank">Instagram</a>
-        </li>
-        <li><a href="" target="_blank">Youtube</a>
-        </li>
-    </ul>
-    <p lang="en">A hair salon for men in Kyiv</p>
-    <h1 lang="en">BarberShop</h1>
-    <p>Мы эксперты в модных мужских стрижках.<br>Работаем быстро, осторожно и со вкусом.</p>
-</section>
-<section>
-    <ul>
-        <li>
-            <img 
-            src="./images/img 1.jpg"
-            alt="Барбер бреет шею"
-            width="270"
-            height="445"
-            >
-        </li>
-        <li>
-            <img
-            src="./images/img 2.jpg"
-            alt="Барбер бреет затилок"
-            width="270"
-            height="445"
-            >
-        </li>
-    </ul>
-    <p>О нас</p>
-    <h2>Лучший Барбершоп твоего города</h2>
-    <p>
-        Если ты хочешь добавить в свой образ больше уверенности – тебе точно к нам.
-    </p>
-    <p>
-        Мы команда, которая никогда не останавливается на достигнутом 
-        и жаждет перемен. И когда ты попадешь в руки нашего мастера, 
-        то уже никогда не сможешь быть прежним. Мы команда, которая всегда с клиентами "на одной волне". Поэтому, мы всегда готовы усовершенствовать каждого, кто к нам приходит!
-    </p>
-    <button type="button">онлайн-запись</button>
-</section>
-<section>
-    <p>
-        Проведи время в компании лучших мастеров
-    </p>
-    <h2>Услуги и цены</h2>
-    <ul>
-        <li>
-            <p>Мужская стрижка</p>
-            <p>от 300 грн.</p>
-        </li>
-        <li>
-            <p>Стрижка бороды</p>
-            <p>от 200 грн.</p>
-        </li>
-        <li>
-            <p>Стрижка усов</p>
-            <p>от 200 грн.</p>
-        </li>
-        <li>
-            <p>Бритье опасной бритвой</p>
-            <p>от 200 грн.</p>
-        </li>
-    </ul>
-    <ul>
-        <li>
-            <p>Cтрижка у стажера</p>
-            <p>от 50 грн.</p>
-        </li>
-        <li>
-            <p>Стрижка под насадку</p>
-            <p>от 200 грн.</p>
-        </li>
-        <li>
-            <p>Детская стрижка (до 12 лет)</p>
-            <p>от 300 грн.</p>
-        </li>
-        <li>
-            <p>Камуфлирование седины</p>
-            <p>от 200 грн.</p>
-        </li>
-    </ul>
-    <button type="button">онлайн-запись</button>
-</section>
-<section>
-    <ul>
-        <li>
-            <p>600</p>
-            <p>Довольных клиентов в день</p>
-        </li>
-        <li>
-            <p>50</p>
-            <p>Наград за отличный сервис </p>
-        </li>
-        <li>
-            <p>20</p>
-            <p>Лучших мастеров Киева </p>
-        </li>
-        <li>
-            <p>100</p>
-            <p>Подарков постоянным клиентам</p>
-        </li>
-    </ul>
-    <p>Cтарая традиционная школа</p>
-    <h2>Почему приходят именно к нам?</h2>
-    <p>
-        О нас говорят только хорошее. Но лучше 1 раз увидеть и прочувствовать, чем 10 раз прочитать. 
-    </p>
-</section>
-<section>
-    <p>Для настоящих ценителей атмосферы</p>
-    <h2>Наши мастера</h2>
-    <ul>
-        <li>
-            <img src="./images/img_master1.jpg" alt="Джон Смит"
-            width="370"
-            height="346">
-                <p lang="en">John Smith</p>
-                <p lang="en">Extreme Barber</p>
-        </li>
-        <li>
-            <img src="./images/img_master2.jpg" alt="Мишель Дое">
-                <p lang="en">Michele Doe</p>
-                <p lang="en">Extreme Barber</p>
-            </img>
-        </li>
-        <li>
-            <img src="./images/img_master3.jpg" alt="Ален Блек">
-                <p lang="en">Alan Black</p>
-                <p lang="en">Extreme Barber</p>
+    </footer>
 
-            </img>
-        </li>
-    </ul>
-</section>
-<section>
-    <!-- <h2>Работы мастеров</h2> -->
-    <p>На латинском языке “барба” означает “борода”</p>
-    <ul>
-        <li><img src="./images/photo1.jpg" alt="Стрижка машинкой"
-            width="270"
-            height="360">
-        </li>
-        <li><img src="./images/photo2.jpg" alt="Бреет бороду"
-            width="270"
-            height="360">
-        </li>
-        <li><img src="./images/photo3.jpg" alt="Увлажняет лицо"
-            width="270"
-            height="360">
-        </li>
-        <li><img src="./images/photo4.jpg" alt="Бреет затилок"
-            width="270"
-            height="360">
-        </li>
-    </ul>
-</section>
-<section>
-    <h2>Онлайн-запись</h2>
-    <h2>Контакты</h2>
-    <address>
-        <ul>
-            <li><a href="https://goo.gl/maps/LbS5ckXCGobnBB1T9" target="_blank" rel="noopener noreferrer">ул. Васильковская, 7А 
-                Киев, 08132</a></li>
-            <li><a href="tel:+380441111111" target="_blank" rel="noopener noreferrer">+38 044 111 11 11</a></li>
-            <li><a href="mailto:barbershop@email.com" target="_blank" rel="noopener noreferrer">barbershop@email.com</a></li>
-        </ul>
-    </address>
-    <b>время работы</b>
-    <p>Ежедневно с 9:00 до 22:00</p>
-</section>
-</main>
-<footer>
-    <p>&copy; Copyright 2020</p>
-    <ul>
-        <li><a href="http://" target="_blank" rel="noopener noreferrer">Instagram</a></li>
-        <li><a href="http://" target="_blank" rel="noopener noreferrer">Youtube</a></li>
-    </ul>
-</footer>
+    <script src="./js/modal.js"></script>
+    <script src="./js/menu.js"></script>
 </body>
 </html>
